fixed horizontal overflow on smaller devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@
   font-size: 20px;
 }
 
+.padding {
+  margin-top: 7px;
+}
+
 .nav {
 
   background-color: #272727;
